test/typeerrors/Examples/PatAs.hs
module PatAs where

a :: Int
(a @ [y]) = 32
